--- a/HW1.ipynb
+++ b/HW1.ipynb
@@ -991,6 +991,34 @@
    "source": [
     "For this model, the test set accuracy is about 0.97, which means we made the right prediction for 97% of the irises in the test set. Under some mathematical assump‐ tions, this means that we can expect our model to be correct 97% of the time for new irises."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Here is a summary of the code needed for the whole training and evaluation procedure:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test set score: 0.97\n"
+     ]
+    }
+   ],
+   "source": [
+    "X_train_, X_test, y_train, y_test = train_test_split(\n",
+    "        iris_dataset['data'], iris_dataset['target'], random_state=0)\n",
+    "knn = KNeighborsClassifier(n_neighbors=1)\n",
+    "knn.fit(X_train_, y_train)\n",
+    "print(\"Test set score: {:.2f}\".format(knn.score(X_test, y_test)))"
+   ]
   }
  ],
  "metadata": {
